--- a/JavascriptForm/index.html
+++ b/JavascriptForm/index.html
@@ -3,6 +3,14 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <title>Information Collector</title>
 </head>
 <body>
@@ -20,11 +28,11 @@
     <span id="lastNameError"></span>
     <p></p>
     Email:<br>
-    <input type="text" name="email" id="email"><br>
+    <input type="text" name="email" id="email"> <span id="errIcon" > </span><br>
     <span id="emailError"></span>
     <p></p>
     Phone number:<br>
-    <input type="text" name="phone" id="phone"><br>
+    <input type="text" name="phone" id="phone"><span id="errIcon2"> </span> <br>
     <span id="phoneError"></span>
     <p></p>
     Comments:<br>
@@ -33,4 +41,4 @@
 </form>
 
 
-<script src='formJS.js'></script>
+<script src='jQueryScript.js'></script>
